Starting an example flickr integration using non-blocking calls

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/support/js-oo"]
 	path = lib/support/js-oo
 	url = git://github.com/visionmedia/js-oo.git
+[submodule "lib/support/flickr"]
+	path = lib/support/flickr
+	url = git://github.com/ciaranj/flickrnode.git
